syntax = "proto3";
package device;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/synrobo/proto/common/common.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;

/* Device: a full-linux computer running consul, docker stack */
message Device {
  string hostname = 1;
  string region = 2;

  DeviceConsulSettings consul_settings = 3;
  DeviceNetworkSettings network_settings = 4;
  DeviceSetupState setup_state = 5;
  DeviceIdentity identity = 6;

  message DeviceConsulSettings {
    bool is_server = 1;
    bool prevent_bootstrap = 2;
  }

  message DeviceNetworkSettings {
    // ip x 4 = ip address
    repeated int32 ip = 1;
  }

  message DeviceSetupState {
    bool identity_inited = 1;
    bool consul_server_bootstrapped = 2;
  }

  message DeviceIdentity {
    /* Unused fields */
    reserved "pkey";
    reserved 1;
    /* Generated certs, latest is first */
    repeated common.CertChain chain = 2;
    string public_key = 3;
  }
}
