syntax = "proto3";
package region;

import "common/common.proto";

/*
  Region: a self contained, isolated, installation with IP ranges.
*/
message Region {
  // slug / ID
  string id = 1;
  // Human readable name
  string name = 2;

  // IP range for devices
  common.IPRange ip_range = 3;
}
