syntax = "proto3";
package timesync;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

message GetUnixTimeRequest {
}

message GetUnixTimeResponse {
  uint32 time = 1;
}

service TimeSyncService {
  rpc GetUnixTime(GetUnixTimeRequest) returns (GetUnixTimeResponse);
}
